Corrected z-index for the NAV bar. Changed the attic for page public/tour/playback_video.adoc

--- a/packages/100_theme_css/scss/theme_uno/modules/_navigator.scss
+++ b/packages/100_theme_css/scss/theme_uno/modules/_navigator.scss
@@ -393,7 +393,7 @@ li.dropdown.nav-sub-item:before {
   			}
   			&.navbar-fixed {
   				position: fixed;
-          z-index: 99;
+          z-index: 999;
   				&.navbar-transparent {
   					.logo-scrolled {
   						display: none;
